--- a/index.html
+++ b/index.html
@@ -228,14 +228,14 @@
         <h2>Featured Games</h2>
         <div class="game-grid">
             <div class="game-card">
-                <a href="./Games/game.html?game=Monkey%20Mart">
+                <a href="./game.html?game=Monkey%20Mart">
                     <img src="./img/monkey.jpeg" alt="Game 1">
                     <h3>Monkey Mart</h3>
                     <p>Play as a monkey making a store</p>
                 </a>
             </div>
             <div class="game-card">
-                <a href="./Games/game.html?game=Bit%20Plane">
+                <a href="./game.html?game=Bit%20Plane">
                     <img src="./img/plane.jpg" alt="Game 2">
                     <h3>Bit Plane</h3>
                     <p>Play an awesome plane fighting game</p>
