--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
     <title>Void's Games</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        html, body {
-            overflow: hidden; /* Prevent scrolling */
-            height: 100vh; /* Make sure the body fits the viewport height */
-            margin: 0;
-            padding: 0;
-        }
-
         body {
             font-family: 'Arial', sans-serif;
             background: #1a1a1a;
             color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
             display: flex;
             flex-direction: column;
+            justify-content: space-between;
+            overflow: hidden; /* Overflow hidden for the entire page */
         }
-
         a {
             text-decoration: none;
             color: inherit;
@@ -34,7 +31,6 @@
             position: sticky;
             top: 0;
             z-index: 1000;
-            flex-shrink: 0;
         }
 
         .topbar h1 {
@@ -75,9 +71,10 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 5vh 2vw; /* Use viewport units for responsive padding */
+            padding: 40px;
             text-align: center;
             background-color: #1a1a1a;
+            overflow: hidden; /* Overflow hidden for the content section */
         }
 
         .content p {
@@ -87,8 +84,9 @@
 
         #icon {
             display: block;
-            width: 20vw; /* Responsive width */
-            height: 20vw; /* Keep it square using the same value for width/height */
+            margin: 20px auto;
+            width: 250px;
+            height: 250px;
             border-radius: 50%;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
         }
@@ -120,6 +118,7 @@
             background-color: #1a1a1a;
             padding: 40px;
             text-align: center;
+            overflow: hidden; /* Overflow hidden for the featured games section */
         }
 
         .featured-games h2 {
@@ -128,25 +127,23 @@
         }
 
         .game-grid {
-            display: flex; 
-            justify-content: center;
-            flex-wrap: wrap;
+            display: flex; /* Changed to flexbox */
+            justify-content: center; /* Center items */
+            flex-wrap: wrap; /* Allow wrapping */
         }
 
         .game-card {
-            width: 20vw; /* Use viewport units for scaling */
-            height: 20vw;
-            max-width: 200px; /* Set a max size */
-            max-height: 200px;
+            width: 200px; /* Set a fixed width */
+            height: 200px; /* Set a fixed height to make it square */
             background-color: #333;
-            margin: 20px;
+            margin: 20px; /* Add margin for spacing */
             border-radius: 15px;
             transition: transform 0.2s;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center;
+            align-items: center; /* Center align content */
         }
 
         .game-card:hover {
@@ -154,15 +151,15 @@
         }
 
         .game-card img {
-            width: 100%;
-            height: auto;
-            max-height: 150px;
+            width: 100%; /* Make images fill the card */
+            height: auto; /* Maintain aspect ratio */
+            max-height: 150px; /* Set a maximum height for images */
             border-radius: 10px;
-            object-fit: cover;
+            object-fit: cover; /* Maintain aspect ratio */
         }
 
         .game-card h3 {
-            margin: 10px 0;
+            margin: 10px 0; /* Adjusted margin for titles */
             font-size: 1.5em;
         }
 
@@ -171,12 +168,12 @@
             text-decoration: none;
             background-color: #333;
             color: #fff;
-            padding: 8px 12px;
-            font-size: 1em;
+            padding: 8px 12px; /* Smaller padding */
+            font-size: 1em; /* Smaller font size */
             border-radius: 15px;
             transition: background-color 0.3s, transform 0.2s;
             text-align: center;
-            width: 100%;
+            width: 100%; /* Make link fill the card */
         }
 
         .game-card a:hover {
@@ -189,23 +186,22 @@
             text-align: center;
             padding: 20px;
             color: #aaa;
-            flex-shrink: 0;
         }
 
         @media (max-width: 768px) {
             .play-button {
-                padding: 10px 15px;
+                padding: 15px 30px;
                 font-size: 1.5em;
             }
 
             #icon {
-                width: 30vw;
-                height: 30vw;
+                width: 200px;
+                height: 200px;
             }
 
             .game-card {
-                width: 40vw;
-                height: auto;
+                width: 100%; /* Make game cards responsive on smaller screens */
+                height: auto; /* Allow height to adjust */
             }
         }
     </style>
