--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
             color: #f5f5f5;
             margin: 0;
             padding: 0;
-            min-height: 100vh;
+            min-height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            max-width: 100vw; /* Prevent overflow */
-            overflow-x: hidden; /* Hide horizontal scrollbar */
         }
         a {
             text-decoration: none;
@@ -72,7 +70,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 5% 2%; /* Adjust padding to be responsive */
+            padding: 40px;
             text-align: center;
             background-color: #1a1a1a;
         }
@@ -116,7 +114,7 @@
 
         .featured-games {
             background-color: #1a1a1a;
-            padding: 5% 2%; /* Adjust padding to be responsive */
+            padding: 40px;
             text-align: center;
         }
 
@@ -126,25 +124,23 @@
         }
 
         .game-grid {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin: 0 -5px; /* Negative margin to offset child margins */
+            display: flex; /* Changed to flexbox */
+            justify-content: center; /* Center items */
+            flex-wrap: wrap; /* Allow wrapping */
         }
 
         .game-card {
-            width: 100%;
-            max-width: 200px;
-            height: auto;
+            width: 200px; /* Set a fixed width */
+            height: 200px; /* Set a fixed height to make it square */
             background-color: #333;
-            margin: 10px; /* Keep some margin but control overall width */
+            margin: 20px; /* Add margin for spacing */
             border-radius: 15px;
             transition: transform 0.2s;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center;
+            align-items: center; /* Center align content */
         }
 
         .game-card:hover {
@@ -152,15 +148,15 @@
         }
 
         .game-card img {
-            width: 100%;
-            height: auto;
-            max-height: 150px;
+            width: 100%; /* Make images fill the card */
+            height: auto; /* Maintain aspect ratio */
+            max-height: 150px; /* Set a maximum height for images */
             border-radius: 10px;
-            object-fit: cover;
+            object-fit: cover; /* Maintain aspect ratio */
         }
 
         .game-card h3 {
-            margin: 10px 0;
+            margin: 10px 0; /* Adjusted margin for titles */
             font-size: 1.5em;
         }
 
@@ -169,12 +165,12 @@
             text-decoration: none;
             background-color: #333;
             color: #fff;
-            padding: 8px 12px;
-            font-size: 1em;
+            padding: 8px 12px; /* Smaller padding */
+            font-size: 1em; /* Smaller font size */
             border-radius: 15px;
             transition: background-color 0.3s, transform 0.2s;
             text-align: center;
-            width: 100%;
+            width: 100%; /* Make link fill the card */
         }
 
         .game-card a:hover {
@@ -190,13 +186,9 @@
         }
 
         @media (max-width: 768px) {
-            .content {
-                padding: 5% 5%; /* Adjust padding */
-            }
-
             .play-button {
-                padding: 10px 20px; /* Smaller buttons on mobile */
-                font-size: 1.2em; /* Adjust font size */
+                padding: 15px 30px;
+                font-size: 1.5em;
             }
 
             #icon {
@@ -204,35 +196,9 @@
                 height: 200px;
             }
 
-            .game-grid {
-                flex-direction: column;
-                align-items: center;
-            }
-
             .game-card {
-                width: 100%;
-                max-width: none;
-                height: auto;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .topbar h1 {
-                font-size: 1.5em; /* Smaller font size */
-            }
-
-            .nav-button, .nav-button2 {
-                padding: 8px 12px; /* Adjust padding for smaller screens */
-                font-size: 0.8em; /* Smaller font size */
-            }
-
-            .play-button {
-                font-size: 1em; /* Smaller font size for buttons */
-                padding: 10px 15px; /* Smaller padding */
-            }
-
-            .game-card h3 {
-                font-size: 1.2em; /* Smaller game title */
+                width: 100%; /* Make game cards responsive on smaller screens */
+                height: auto; /* Allow height to adjust */
             }
         }
     </style>
