--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
             color: #f5f5f5;
             margin: 0;
             padding: 0;
+            min-height: 100vh; /* Use vh for full viewport height */
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            box-sizing: border-box; /* Added box-sizing */
         }
         a {
             text-decoration: none;
@@ -82,8 +84,9 @@
         #icon {
             display: block;
             margin: 20px auto;
-            width: 250px;
-            height: 250px;
+            width: 80%; /* Adjusted to fit screen better */
+            max-width: 250px; /* Set maximum width */
+            height: auto; /* Allow height to adjust */
             border-radius: 50%;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
         }
@@ -129,10 +132,11 @@
         }
 
         .game-card {
-            width: 200px; /* Set a fixed width */
-            height: 200px; /* Set a fixed height to make it square */
+            width: 100%; /* Change to 100% for responsiveness */
+            max-width: 200px; /* Set a maximum width */
+            height: auto; /* Allow height to adjust */
             background-color: #333;
-            margin: 20px; /* Add margin for spacing */
+            margin: 20px; /* Maintain spacing */
             border-radius: 15px;
             transition: transform 0.2s;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -191,12 +195,13 @@
             }
 
             #icon {
-                width: 200px;
-                height: 200px;
+                max-width: 200px; /* Maintain maximum size */
+                height: auto; /* Allow height to adjust */
             }
 
             .game-card {
-                width: 100%; /* Make game cards responsive on smaller screens */
+                width: 90%; /* More responsive on smaller screens */
+                max-width: 200px; /* Maintain max-width */
                 height: auto; /* Allow height to adjust */
             }
         }
