--- a/index.html
+++ b/index.html
@@ -8,19 +8,13 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: #1a1a1a;
+            background-color: #1a1a1a;
             color: #f5f5f5;
             margin: 0;
             padding: 0;
-            min-height: 100vh; /* Use vh for full viewport height */
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
-            box-sizing: border-box; /* Added box-sizing */
-        }
-        a {
-            text-decoration: none;
-            color: inherit;
+            height: 100vh; 
         }
 
         .topbar {
@@ -43,26 +37,21 @@
             margin-top: 10px;
         }
 
-        .nav-button, .nav-button2 {
+        .nav-button {
             text-decoration: none;
             background-color: #333;
-            border: none;
             color: #fff;
             padding: 10px 20px;
             margin: 5px;
-            cursor: pointer;
-            font-size: 1em;
             border-radius: 30px;
-            transition: background-color 0.3s, transform 0.2s;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
         }
 
         .nav-button:hover {
             background-color: #555;
             transform: scale(1.05);
-        }
-
-        .nav-button2 {
-            background-color: #666;
+            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.5);
         }
 
         .content {
@@ -71,138 +60,89 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 40px;
-            text-align: center;
-            background-color: #1a1a1a;
-        }
-
-        .content p {
-            font-size: 1.5em;
-            margin: 10px 0;
-        }
-
-        #icon {
-            display: block;
-            margin: 20px auto;
-            width: 80%; /* Adjusted to fit screen better */
-            max-width: 250px; /* Set maximum width */
-            height: auto; /* Allow height to adjust */
-            border-radius: 50%;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-        }
-
-        .play-button-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 30px 0;
-        }
-
-        .play-button {
-            text-decoration: none;
-            background: linear-gradient(145deg, #28a745, #218838);
-            color: #fff;
-            padding: 10px 20px;
-            font-size: 2em;
-            border-radius: 50px;
-            border: 2px solid #1e7e34;
-            transition: background 0.3s, transform 0.2s;
-        }
-
-        .play-button:hover {
-            background: linear-gradient(145deg, #218838, #28a745);
-            transform: translateY(-5px);
-        }
-
-        .featured-games {
-            background-color: #1a1a1a;
-            padding: 40px;
-            text-align: center;
-        }
-
-        .featured-games h2 {
-            font-size: 2.2em;
-            margin-bottom: 30px;
-        }
-
-        .game-grid {
-            display: flex; /* Changed to flexbox */
-            justify-content: center; /* Center items */
-            flex-wrap: wrap; /* Allow wrapping */
-        }
-
-        .game-card {
-            width: 100%; /* Change to 100% for responsiveness */
-            max-width: 200px; /* Set a maximum width */
-            height: auto; /* Allow height to adjust */
-            background-color: #333;
-            margin: 20px; /* Maintain spacing */
-            border-radius: 15px;
-            transition: transform 0.2s;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center; /* Center align content */
-        }
-
-        .game-card:hover {
-            transform: scale(1.05);
-        }
-
-        .game-card img {
-            width: 100%; /* Make images fill the card */
-            height: auto; /* Maintain aspect ratio */
-            max-height: 150px; /* Set a maximum height for images */
-            border-radius: 10px;
-            object-fit: cover; /* Maintain aspect ratio */
-        }
-
-        .game-card h3 {
-            margin: 10px 0; /* Adjusted margin for titles */
-            font-size: 1.5em;
-        }
-
-        .game-card a {
-            display: block;
-            text-decoration: none;
-            background-color: #333;
-            color: #fff;
-            padding: 8px 12px; /* Smaller padding */
-            font-size: 1em; /* Smaller font size */
-            border-radius: 15px;
-            transition: background-color 0.3s, transform 0.2s;
-            text-align: center;
-            width: 100%; /* Make link fill the card */
-        }
-
-        .game-card a:hover {
-            background-color: #555;
-            transform: scale(1.05);
-        }
-
-        .footer {
-            background-color: #1a1a1a;
             text-align: center;
             padding: 20px;
-            color: #aaa;
+            overflow: hidden; /* Prevent overflow */
         }
 
-        @media (max-width: 768px) {
-            .play-button {
-                padding: 15px 30px;
-                font-size: 1.5em;
+        /* Light Blue and Fancy Iframe Container */
+        .iframe-container {
+            width: 90%;
+            max-width: 1200px; /* Max width for larger screens */
+            height: 80vh;
+            position: relative;
+            background: linear-gradient(135deg, rgba(66, 245, 236, 0.3), rgba(255, 255, 255, 0.1));
+            border-radius: 20px;
+            padding: 10px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.7);
+            backdrop-filter: blur(10px);
+            border: 2px solid rgba(66, 245, 236, 0.2);
+            overflow: hidden;
+        }
+
+        /* Light Blue Neon Glow and Animated Border */
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+            border-radius: 15px;
+            background: rgba(0, 0, 0, 0.8);
+            box-shadow: 0 0 15px rgba(66, 245, 236, 0.5), 0 0 30px rgba(66, 245, 236, 0.5);
+            animation: glowing-border 3s infinite alternate;
+        }
+
+        @keyframes glowing-border {
+            0% {
+                box-shadow: 0 0 20px rgba(66, 245, 236, 0.7), 0 0 40px rgba(66, 245, 236, 0.4);
+            }
+            100% {
+                box-shadow: 0 0 60px rgba(66, 245, 236, 1), 0 0 80px rgba(66, 245, 236, 0.8);
+            }
+        }
+
+        /* Square Fullscreen Button */
+        .fullscreen-button {
+            position: absolute;
+            bottom: 15px;
+            right: 15px;
+            width: 50px; /* Square size */
+            height: 50px;
+            background-image: url('./img/fullscreen.png');
+            background-size: cover;
+            background-color: rgba(255, 255, 255, 0.3);
+            border: 2px solid rgba(66, 245, 236, 0.3);
+            border-radius: 5px; /* Square shape with slightly rounded corners */
+            cursor: pointer;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .fullscreen-button:hover {
+            transform: scale(1.1);
+            box-shadow: 0 0 15px rgba(66, 245, 236, 0.6);
+        }
+
+        /* Responsive Design Adjustments */
+        @media (max-width: 600px) {
+            .topbar h1 {
+                font-size: 2em; /* Adjust font size for smaller screens */
             }
 
-            #icon {
-                max-width: 200px; /* Maintain maximum size */
-                height: auto; /* Allow height to adjust */
+            .nav-button {
+                padding: 8px 15px; /* Smaller button padding */
             }
 
-            .game-card {
-                width: 90%; /* More responsive on smaller screens */
-                max-width: 200px; /* Maintain max-width */
-                height: auto; /* Allow height to adjust */
+            .iframe-container {
+                height: 60vh; /* Adjust iframe height for smaller screens */
+            }
+        }
+
+        @media (max-width: 400px) {
+            .topbar h1 {
+                font-size: 1.5em; /* Further adjust for very small screens */
+            }
+
+            .nav-button {
+                padding: 5px 10px; /* Even smaller button padding */
             }
         }
     </style>
@@ -211,51 +151,63 @@
     <div class="topbar">
         <h1>Void's Games</h1>
         <div class="nav-buttons">
-            <a href="./" class="nav-button2">Home</a>
-            <a href="./Games.html" class="nav-button">Games</a>
-            <a href="./About.html" class="nav-button">About</a>
+            <a href="index.html" class="nav-button">Home</a>
+            <a href="games.html" class="nav-button">Games</a>
+            <a href="about.html" class="nav-button">About</a>
         </div>
     </div>
-    
     <div class="content">
-        <p>Hey, what is this website?</p>
-        <p>This is a simple game website to have fun.</p>
-        <p>It will be updated pretty often.</p>
-        <img src="./img/icons.png" id="icon" alt="Game Icon">
-    </div>
-
-    <div class="play-button-container">
-        <a href="./Games.html" class="play-button">Play</a>
-    </div>
-
-    <div class="featured-games">
-        <h2>Featured Games</h2>
-        <div class="game-grid">
-            <div class="game-card">
-                <a href="./game.html?game=Monkey%20Mart">
-                    <img src="./img/monkey.jpeg" alt="Game 1">
-                    <h3>Monkey Mart</h3>
-                    <p>Play as a monkey making a store</p>
-                </a>
-            </div>
-            <div class="game-card">
-                <a href="./game.html?game=Bit%20Plane">
-                    <img src="./img/plane.jpg" alt="Game 2">
-                    <h3>Bit Plane</h3>
-                    <p>Play an awesome plane fighting game</p>
-                </a>
-            </div>
-            <div class="game-card">
-                <a href="./game.html?game=Subway%20Surfers">
-                    <img src="./img/other.jpeg" alt="Game 3">
-                    <h3>Subway Surfers</h3>
-                    <p>Play the mobile game Subway Surfers!</p>
-                </a>
-            </div>
+        <div class="iframe-container">
+            <iframe id="gameIframe" src="" frameborder="0"></iframe>
+            <button class="fullscreen-button" onclick="toggleFullscreen()"></button>
         </div>
     </div>
 
-    <div class="footer">
-    </div>
+    <script>
+        async function fetchGames() {
+            const response = await fetch('/games.json');
+            return await response.json();
+        }
+
+        function getGameFromURL() {
+            const urlParams = new URLSearchParams(window.location.search);
+            return urlParams.get('game');
+        }
+
+        async function setIframeSource() {
+            const game = getGameFromURL();
+            const gamesData = await fetchGames();
+            const gameEntry = gamesData.gameButtons.find(g => g.text === game);
+            const iframe = document.getElementById('gameIframe');
+            iframe.src = gameEntry ? gameEntry.link2 : '';
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            setIframeSource();
+        });
+
+        function toggleFullscreen() {
+            const iframe = document.getElementById('gameIframe');
+            if (iframe.requestFullscreen) {
+                if (document.fullscreenElement) {
+                    document.exitFullscreen(); 
+                } else {
+                    iframe.requestFullscreen(); 
+                }
+            } else if (iframe.webkitRequestFullscreen) { /* Safari */
+                if (document.webkitFullscreenElement) {
+                    document.webkitExitFullscreen();
+                } else {
+                    iframe.webkitRequestFullscreen();
+                }
+            } else if (iframe.msRequestFullscreen) { /* IE11 */
+                if (document.msFullscreenElement) {
+                    document.msExitFullscreen();
+                } else {
+                    iframe.msRequestFullscreen();
+                }
+            }
+        }
+    </script>
 </body>
 </html>
