--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             color: #f5f5f5;
             margin: 0;
             padding: 0;
-            min-height: 100vh;
+            height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -124,23 +124,23 @@
         }
 
         .game-grid {
-            display: flex; /* Changed to flexbox */
-            justify-content: center; /* Center items */
-            flex-wrap: wrap; /* Allow wrapping */
+            display: flex; 
+            justify-content: center; 
+            flex-wrap: wrap; 
         }
 
         .game-card {
-            width: 200px; /* Set a fixed width */
-            height: 200px; /* Set a fixed height to make it square */
+            width: 200px; 
+            height: 200px; 
             background-color: #333;
-            margin: 0; /* Remove margin */
+            margin: 0; 
             border-radius: 15px;
             transition: transform 0.2s;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center; /* Center align content */
+            align-items: center; 
         }
 
         .game-card:hover {
@@ -148,15 +148,15 @@
         }
 
         .game-card img {
-            width: 100%; /* Make images fill the card */
-            height: auto; /* Maintain aspect ratio */
-            max-height: 150px; /* Set a maximum height for images */
+            width: 100%; 
+            height: auto; 
+            max-height: 150px; 
             border-radius: 10px;
-            object-fit: cover; /* Maintain aspect ratio */
+            object-fit: cover; 
         }
 
         .game-card h3 {
-            margin: 10px 0; /* Adjusted margin for titles */
+            margin: 10px 0; 
             font-size: 1.5em;
         }
 
@@ -165,12 +165,12 @@
             text-decoration: none;
             background-color: #333;
             color: #fff;
-            padding: 8px 12px; /* Smaller padding */
-            font-size: 1em; /* Smaller font size */
+            padding: 8px 12px; 
+            font-size: 1em; 
             border-radius: 15px;
             transition: background-color 0.3s, transform 0.2s;
             text-align: center;
-            width: 100%; /* Make link fill the card */
+            width: 100%; 
         }
 
         .game-card a:hover {
@@ -178,12 +178,6 @@
             transform: scale(1.05);
         }
 
-        .footer {
-            background-color: #1a1a1a;
-            text-align: center;
-            padding: 20px;
-            color: #aaa;
-        }
 
         @media (max-width: 768px) {
             .play-button {
@@ -197,8 +191,8 @@
             }
 
             .game-card {
-                width: 100%; /* Make game cards responsive on smaller screens */
-                height: auto; /* Allow height to adjust */
+                width: 100%; 
+                height: auto; 
             }
         }
     </style>
@@ -213,12 +207,12 @@
         </div>
     </div>
     
-    <div class="content">
+    <main class="content">
         <p>Hey, what is this website?</p>
         <p>This is a simple game website to have fun.</p>
         <p>It will be updated pretty often.</p>
-        <img src="./img/icons.png" id="icon" alt="Game Icon">
-    </div>
+        <img src="./img/icons.png" id="icon" alt="Game Icon representing Void's Games">
+    </main>
 
     <div class="play-button-container">
         <a href="./Games.html" class="play-button">Play</a>
@@ -229,21 +223,21 @@
         <div class="game-grid">
             <div class="game-card">
                 <a href="./Games/game.html?game=Monkey%20Mart">
-                    <img src="./img/monkey.jpeg" alt="Game 1">
+                    <img src="./img/monkey.jpeg" alt="Game 1: Monkey Mart">
                     <h3>Monkey Mart</h3>
                     <p>Play as a monkey making a store</p>
                 </a>
             </div>
             <div class="game-card">
                 <a href="./Games/game.html?game=Bit%20Plane">
-                    <img src="./img/plane.jpg" alt="Game 2">
+                    <img src="./img/plane.jpg" alt="Game 2: Bit Plane">
                     <h3>Bit Plane</h3>
                     <p>Play an awesome plane fighting game</p>
                 </a>
             </div>
             <div class="game-card">
-                <a href="./game.html?game=Subway%20Surfers">
-                    <img src="./img/subwaysurfers.png" alt="Game 3">
+                <a href="./Games/game.html?game=Subway%20Surfers">
+                    <img src="./img/subwaysurfers.png" alt="Game 3: Subway Surfers">
                     <h3>Subway Surfers</h3>
                     <p>Play Subway Surfers!</p>
                 </a>
@@ -251,7 +245,7 @@
         </div>
     </div>
 
-    <div class="footer">
-    </div>
+    <footer class="footer">
+    </footer>
 </body>
 </html>
