--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         .featured-games h2 {
             font-size: 2.2em;
-            margin-bottom: 30px;
+            margin-bottom: 100%;
         }
 
         .game-grid {
