--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
         }
 
         .nav-buttons {
-            margin-top: 10px;
-            display: flex; /* Added flexbox for button alignment */
-            justify-content: center; /* Center the buttons */
-            flex-wrap: wrap; /* Wrap buttons on smaller screens */
+            display: flex; /* Use flexbox for alignment */
+            justify-content: center; /* Center buttons */
+            margin: 10px 0; /* Space around the buttons */
+            flex-wrap: wrap; /* Allow buttons to wrap */
         }
 
         .nav-button, .nav-button2 {
             background-color: #333;
             color: #fff;
-            padding: 10px 15px; /* Reduced padding */
-            margin: 5px; /* Margin for spacing between buttons */
+            padding: 10px 15px; 
+            margin: 5px; 
             cursor: pointer;
             font-size: 1em;
             border-radius: 30px;
@@ -72,26 +72,28 @@
             justify-content: center;
             padding: 20px;
             text-align: center;
-            overflow-y: auto; /* Allows scrolling within this section if needed */
+            overflow: hidden; /* Prevent overflow */
         }
 
         .content p {
             font-size: 1.5em;
-            margin: 5px 0; /* Reduced margin */
+            margin: 5px 0; 
         }
 
         #icon {
             display: block;
             margin: 10px auto;
-            width: 70%; /* Responsive width */
-            max-width: 250px; /* Max width */
-            height: auto; /* Height auto for responsiveness */
+            width: 70%; 
+            max-width: 250px; 
+            height: auto; 
             border-radius: 50%;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
         }
 
         .play-button-container {
-            margin: 20px 0; /* Adjusted margin */
+            margin: 20px 0; 
+            display: flex; /* Center the play button */
+            justify-content: center; 
         }
 
         .play-button {
@@ -110,24 +112,24 @@
         }
 
         .featured-games {
-            padding: 20px; /* Reduced padding */
+            padding: 20px; 
             text-align: center;
         }
 
         .featured-games h2 {
             font-size: 2em;
-            margin-bottom: 20px; /* Adjusted margin */
+            margin-bottom: 20px; 
         }
 
         .game-grid {
             display: flex; 
             justify-content: center; 
             flex-wrap: wrap; 
-            gap: 10px; /* Added gap for spacing between cards */
+            gap: 10px; 
         }
 
         .game-card {
-            width: calc(33.333% - 20px); /* Responsive width with gap consideration */
+            width: calc(33.333% - 20px); 
             background-color: #333;
             border-radius: 15px;
             transition: transform 0.2s;
@@ -184,25 +186,25 @@
             }
 
             #icon {
-                width: 80%; /* Adjusted for smaller screens */
+                width: 80%; 
             }
 
             .game-card {
-                width: calc(50% - 10px); /* 2 cards per row on smaller screens */
+                width: calc(50% - 10px); 
             }
         }
 
         @media (max-width: 480px) {
             .game-card {
-                width: 100%; /* Full width for mobile */
+                width: 100%; 
             }
 
             .topbar h1 {
-                font-size: 1.5em; /* Responsive font size */
+                font-size: 1.5em; 
             }
 
             .content p {
-                font-size: 1.2em; /* Smaller font size for mobile */
+                font-size: 1.2em; 
             }
         }
     </style>
